--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,7 +8,8 @@ body {
     font-weight: 400;
     line-height: 1.6;
     color: #615551;
-    background-image: linear-gradient(to right bottom, #fbdb89, #f48982);
+    background-image: linear-gradient(to right bottom, #7bff8b91, #36da3d96),
+     url("https://wallpaperaccess.com/full/2862101.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     min-height: calc(100vh - 8vw);
@@ -22,8 +23,9 @@ body {
     justify-content: space-between;
 }
 .header__logo {
-    margin-left: 4rem;
-    height: 4.6rem;
+    margin-right: 2rem;
+    margin-left: 2rem;
+    height: 9.6rem;
     display: block;
 }
 .search__btn {
@@ -31,7 +33,7 @@ body {
     font-family: inherit;
 }
 .container {
-    max-width: 120rem;
+    max-width: 85vw;
     min-height: 117rem;
     margin: 4vw auto;
     background-color: #fff;
@@ -47,12 +49,11 @@ body {
 }
 
 .search {
-    background-color: #fff;
-    border-radius: 10rem;
-    display: flex;
-    align-items: center;
+    display: grid;
     padding-left: 3rem;
     transition: all 0.3s;
+    width: 45vw;
+    place-content: space-between;
 }
 .search__field {
     border: none;
@@ -60,18 +61,22 @@ body {
     font-family: inherit;
     color: inherit;
     font-size: 1.7rem;
-    width: 30rem;
+    width: 100%;
+    background-color: #fff;
+    border-radius: 10rem;
 }
 .nav {
-    align-self: stretch;
-    margin-right: 2.5rem;
+    /* align-self: stretch; */
+    width: 24vw;
 }
 .nav__btn svg {
     height: 2.4rem;
     width: 2.4rem;
-    fill: #f38e82;
     margin-right: 0.7rem;
     transform: translateY(-1px);
+}
+svg {
+    fill: #36da3d;
 }
 .btn {
     padding: 1.5rem 4rem;
@@ -85,7 +90,7 @@ body {
     fill: currentColor;
 }
 .btn--small, .btn--small:link, .btn--small:visited, .btn {
-    background-image: linear-gradient(to right bottom, #fbdb89, #f48982);
+    background-image: linear-gradient(to right bottom, #7bff8b, #36da3d);
     border-radius: 10rem;
     border: none;
     text-transform: uppercase;
@@ -116,8 +121,19 @@ body {
     background: none;
     border: none;
     cursor: pointer;
-    padding: 0 1.5rem;
+    padding: 0 0.5rem;
     transition: all 0.3s;
     display: flex;
     align-items: center;
+}
+
+
+@media only screen and (max-width: 1200px) {
+    .nav__list {
+        flex-direction: column;
+        margin-top: 3vh;
+    }
+    .nav__item {
+        padding-top: 1.5vh;
+    }
 }
