--- a/public/css/main.css
+++ b/public/css/main.css
@@ -54,6 +54,10 @@ body {
     transition: all 0.3s;
     width: 45vw;
     place-content: space-between;
+    margin-top: 5vh;
+    grid-template-columns: 1fr 120px;
+    grid-template-rows: 40% 30% 20%;
+    grid-row-gap: 3px;
 }
 .search__field {
     border: none;
@@ -63,7 +67,7 @@ body {
     font-size: 1.7rem;
     width: 100%;
     background-color: #fff;
-    border-radius: 10rem;
+    /* border-radius: 10rem; */
 }
 .nav {
     /* align-self: stretch; */
@@ -75,11 +79,17 @@ body {
     margin-right: 0.7rem;
     transform: translateY(-1px);
 }
+.advanced__icon {
+    height: 2.4rem;
+    width: 2.4rem;
+    margin-right: 0.7rem;
+    transform: translateY(-1px);
+}
 svg {
     fill: #36da3d;
 }
 .btn {
-    padding: 1.5rem 4rem;
+    padding: 1.5rem 1.5rem;
     font-size: 1.5rem;
     font-weight: 600;
 }
@@ -91,7 +101,7 @@ svg {
 }
 .btn--small, .btn--small:link, .btn--small:visited, .btn {
     background-image: linear-gradient(to right bottom, #7bff8b, #36da3d);
-    border-radius: 10rem;
+    /* border-radius: 10rem; */
     border: none;
     text-transform: uppercase;
     color: #fff;
@@ -111,7 +121,7 @@ svg {
     position: relative;
 }
 
-.nav__btn {
+.nav__btn{
     height: 100%;
     font-family: inherit;
     color: inherit;
@@ -127,6 +137,27 @@ svg {
     align-items: center;
 }
 
+#radio {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size:2rem;
+    font-weight: 700;
+    appearance: none;
+    justify-content: space-around;
+
+}
+#radio div {
+    display: flex
+}
+.target {
+
+    height: 25px;
+    width: 25px;
+    background-color: #fff;
+    border-radius: 50%;
+  
+}
 
 @media only screen and (max-width: 1200px) {
     .nav__list {
