--- a/public/css/classement.css
+++ b/public/css/classement.css
@@ -4,14 +4,22 @@
 
 #classementContainer {
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(180px, 1fr));
-    padding: 2vw;
-    column-gap: 4vw;
+    grid-template-columns: repeat(auto-fit,minmax(250px, 1fr));
+    padding: 8rem 6rem;
+    gap: 2vw;
 }
 
 #classementContainer div{
-    background: var(--gradient);
-    padding: 3%;
+    border-radius: 18px;
+    overflow: hidden;
+    box-shadow: 0 1.5rem 4rem rgb(0 0 0 / 10%);
+    background-color: #fff;
+    transition: 0.3s all;
+    backface-visibility: hidden;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    height: fit-content;
 }
 
 #classementContainer h2, #classementContainer h3{
@@ -26,4 +34,31 @@
 .previous {
     width: 50px;
     cursor: pointer;
+    width: 70px;
+    height: 70px;
+    padding: 20px;
+    cursor: pointer;
+}
+
+.tags {
+    border: none;
+    text-transform: uppercase;
+    color: black;
+    display: flex;
+    align-items: center;
+    background-color: var(--lighterGreen);
+    padding: 8px;
+    margin-right: 3px;
+    margin-left: 3px;
+    font-size: 1rem;
+    border-radius: 10px;
+}
+
+.tagList {
+    display: flex;
+    list-style: none;
+    padding: 0px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    align-self: center;
 }
