--- a/public/css/classement.css
+++ b/public/css/classement.css
@@ -4,7 +4,7 @@
 
 #classementContainer, #rechercheContainer {
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fill,minmax(250px, 1fr));
     padding: 8rem 6rem;
     gap: 2vw;
     background-color: white;
