--- a/public/css/recherche.css
+++ b/public/css/recherche.css
@@ -1,5 +1,5 @@
 #rechercheContainer {
-    grid-template-columns: repeat(auto-fit,minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fill,minmax(250px, 1fr));
     gap: 3vw;
 }
 
