--- a/public/css/pagination.css
+++ b/public/css/pagination.css
@@ -1,11 +1,25 @@
   
 .pagination a {
-    color: black;
-    float: left;
-    padding: 8px 16px;
     text-decoration: none;
+    padding: 15px;
+    background: white;
+    border-radius: 10px;
+    border: 2px black solid;
+    color: black;
+    width: 100%;
   }
 
 .paginationBar {
     display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    list-style-type: none;
+    font-size: 2.7rem;
+    padding: 0px;
+    background: var(--lighterGreen);
+    height: 80px;
+    margin-left: 5vw;
+    margin-right: 5vw;
+    border: 2px black solid;
+    border-radius: 20px;
 }
