--- a/public/css/pagination.css
+++ b/public/css/pagination.css
@@ -1,12 +1,14 @@
   
 .pagination a, #next a, #previous a{
     text-decoration: none;
-    padding: 15px;
+    padding: 0px 10px;
     background: white;
     border-radius: 10px;
     border: 2px black solid;
     color: black;
-    width: 100%;
+    width: 4vw;
+    display: block;
+    text-align-last: center;
   }
 
 .paginationBar {
@@ -14,7 +16,7 @@
     justify-content: space-evenly;
     align-items: center;
     list-style-type: none;
-    font-size: 2.7rem;
+    font-size: 3.5rem;
     padding: 0px;
     background: var(--lighterGreen);
     height: 80px;
@@ -22,4 +24,17 @@
     margin-right: 5vw;
     border: 2px black solid;
     border-radius: 20px;
+}
+
+@media only screen and (max-width: 1200px) {
+    .paginationBar {
+        font-size: 3rem;
+    }
+
+}
+@media only screen and (max-width: 800px) {
+    .paginationBar {
+        font-size: 2rem;
+    }
+
 }
