--- a/public/css/recherche.css
+++ b/public/css/recherche.css
@@ -1,10 +1,13 @@
 #rechercheContainer {
     grid-template-columns: repeat(auto-fill,minmax(250px, 1fr));
     gap: 3vw;
+    margin-top: 100px;
 }
 
 #rechercheContainer div{
     margin: 0.5vw 2vw 0.5vw 2vw;
+    padding: 0px;
+
 }
 
 #rechercheContainer h2, #rechercheContainer h3{
