Deux bug fix majeur : 1- Le design responsive ne fonctionnait pas en situation réel 2- Lors du dernier commit j'ai rendu les images clickable et ça a cassé la précédente implémentation des détails d'un livre

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -284,3 +284,15 @@ a:active {
         display: none;
     }
 }
+
+@media only screen and (max-width: 600px) {
+
+    #accueil_start ul {
+        line-height: 23px;
+    }
+    .counter {
+        width: fit-content;
+        padding : 0;
+        font-size: 30px;
+    }
+}
