--- a/public/css/main.css
+++ b/public/css/main.css
@@ -278,7 +278,7 @@ a:active {
 @media only screen and (max-width: 850px) {
 
     .container {
-        max-width: 91vw!important;
+        max-width: 91vw;
     }
     .nav {
         display: none;
@@ -295,4 +295,22 @@ a:active {
         padding : 0;
         font-size: 30px;
     }
+}
+
+@media only screen and (max-width: 450px) {
+
+    body {
+        margin:0;
+    }
+    
+    .container {
+        max-width: 100vw;
+    }
+    .radio {
+        display: none;
+    }
+    body {
+        background: none;
+    }
+
 }
