Fix d'un bug avec le header sur les plus petits écrans

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -276,7 +276,9 @@ a:active {
 }
 
 @media only screen and (max-width: 850px) {
-
+    .acceuil_illustration {
+        width: fit-content;
+    }
     .container {
         max-width: 91vw;
     }
@@ -306,7 +308,7 @@ a:active {
     .container {
         max-width: 100vw;
     }
-    #radio {
+    .advanced__btn {
         display: none;
     }
     body {
@@ -320,6 +322,9 @@ a:active {
     }
     #reading-image {
         width: 100%;
+    }
+    .header__logo {
+        display: none;
     }
 
 }
